--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,23 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import '../styles/global.css'
+import Layout from "../layouts/Layout.astro";
+import Header from "../components/Header.astro";
+const languages = [
+    { code: 'es', name: 'Español', flag: 'es.svg' },
+    { code: 'en', name: 'English', flag: 'en.svg' },
+];
 ---
 
 <Layout>
-	<Welcome />
+    <Header mostrarTodo={false} />
+    <div class="flex flex-col p-4 gap-6 mt-10">
+        {languages.map(lang => (
+                <a class="flex items-center gap-4 px-4 py-2 bg-white/10 backdrop-blur text-white border border-white/20 rounded-xl" href={`/${lang.code}`}>
+                    <img src={`/src/assets/flags/${lang.flag}`} class="w-16 h-auto object-cover rounded-md mr-4" alt={lang.name + ' flag'}></img>
+                    <h2 class="text-lg font-semibold text-white">{lang.name}</h2>
+                </a>
+        ))}
+    </div>
 </Layout>
+
+
