--- a/src/components/Categoria.astro
+++ b/src/components/Categoria.astro
@@ -8,10 +8,13 @@ const { categoria } = Astro.props as {
 };
 ---
 
-<section class="my-8">
-  <h2 class="text-2xl font-bold text-center mb-6 scroll-mt-8" id={categoria.nombre}>
-    {traducir(categoria.nombre)}
-  </h2>
+<section class="my-8 px-4">
+  <div class="flex flex-row items-center mb-6 gap-4">
+    <img src={`/src/assets/images/${categoria.imagen}`} alt={categoria.imagen} class="w-16 h-16" />
+    <h2 class="text-2xl font-bold scroll-mt-8" id={categoria.nombre}>
+      {traducir(categoria.nombre)}
+    </h2>
+  </div>
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 pb-5">
     {categoria.productos.map((producto) => <Producto {...producto} />)}
   </div>
