--- a/src/components/Categoria.astro
+++ b/src/components/Categoria.astro
@@ -10,7 +10,7 @@ const { categoria } = Astro.props as {
 
 <section class="my-8 px-4">
   <div class="flex flex-row items-center mb-6 gap-4">
-    <img src={`/src/assets/images/${categoria.imagen}`} alt={categoria.imagen} class="w-16 h-16" />
+    <img src={`/images/${categoria.imagen}`} alt={categoria.imagen} class="w-16 h-16" />
     <h2 class="text-2xl font-bold scroll-mt-8" id={categoria.nombre}>
       {traducir(categoria.nombre)}
     </h2>
