--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,10 +6,10 @@ const {mostrarTodo} = Astro.props as { mostrarTodo: boolean };
 
 <header class="flex justify-center p-4">
     {mostrarTodo && (<a href={`/${getIdioma()}`} class="flex-1 flex items-center sticky top-0">
-        <img src="/src/assets/images/lupa.svg" alt="Categorias" class="text-white-100 w-5 rounded"/>
+        <img src="/images/lupa.svg" alt="Categorias" class="text-white-100 w-5 rounded"/>
     </a>)}
-    <img src="/src/assets/images/logo.png" alt="Heaven's Door" class="w-60 h-10 object-cover" />
+    <img src="/images/logo.png" alt="Heaven's Door" class="w-60 h-10 object-cover" />
     {mostrarTodo && (<a href="/" class="flex-1 flex justify-end">
-        <img src={`/src/assets/flags/${getIdioma()}.svg`} class="w-8 rounded" alt={getIdioma()}/>
+        <img src={`/flags/${getIdioma()}.svg`} class="w-8 rounded" alt={getIdioma()}/>
     </a>)}
 </header>
