--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const languages = [
     <div class="flex flex-col p-4 gap-6 mt-10">
         {languages.map(lang => (
                 <a class="flex items-center gap-4 px-4 py-2 bg-white/10 backdrop-blur text-white border border-white/20 rounded-xl" href={`/${lang.code}`}>
-                    <img src={`/src/assets/flags/${lang.flag}`} class="w-16 h-auto object-cover rounded-md mr-4" alt={lang.name + ' flag'}></img>
+                    <img src={`/flags/${lang.flag}`} class="w-16 h-auto object-cover rounded-md mr-4" alt={lang.name + ' flag'}></img>
                     <h2 class="text-lg font-semibold text-white">{lang.name}</h2>
                 </a>
         ))}
