--- a/src/pages/en/productos.astro
+++ b/src/pages/en/productos.astro
@@ -11,7 +11,7 @@ setIdioma('en');
 
 <Layout>
     <Header mostrarTodo={true} />
-    <div class="h-[calc(100vh-4rem)] overflow-y-auto scroll-smooth">
+    <div class="flex-1 overflow-y-auto scroll-smooth">
         {carta_bar.map((categoria) => <Categoria categoria={categoria} />)}
     </div>
 
