--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,6 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .fondo {
     background-image: url(../assets//images/fondo_pizarra.webp);
