--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,7 @@
     <meta name="generator" content={Astro.generator} />
     <title>Heavens Door</title>
   </head>
-  <body class="fondo flex flex-col min-h-screen">
+  <body class="fondo flex flex-col">
     <slot />
   </body>
 </html>
